Fixes appointments table on mobile

--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -10336,7 +10336,6 @@ body {
 body {
     font-weight: 400;
     position: relative;
-    overflow-x: hidden;
 }
 
 audio,
